new Angular and node code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
 <main>
-  <app-post (postCreated)="onPostAdded($event)"></app-post>
-  <app-post-list [posts] = "storedPost"></app-post-list>
+  <app-post ></app-post>
+  <app-post-list ></app-post-list>
 </main>
