--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -1,9 +1,13 @@
 <mat-accordion multi="true" *ngIf="posts.length > 0">
   <mat-expansion-panel *ngFor = "let post of posts" >
     <mat-expansion-panel-header>
-      {{post.title}}<!-- or {{post['title']}} -->
+      <p>{{post.title}}</p><!-- or {{post['title']}} -->
     </mat-expansion-panel-header>
-    {{post.content}}<!-- or {{post['content']}} -->
+    <p>{{post.content}}</p><!-- or {{post['content']}} -->
+    <mat-action-row>
+      <button mat-button color="primary">EDIT</button>
+      <button mat-button color="warn">DELETE</button>
+    </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
 <p class="info-text mat-body-1" *ngIf="posts.length <= 0">No Post yet</p>
