Adding AngularRoute , editPost, deletePost , nodeRoute, spinner

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <app-header></app-header>
 <main>
-  <app-post ></app-post>
-  <app-post-list ></app-post-list>
+
+  <router-outlet></router-outlet>
+
+  <!-- <app-post ></app-post>
+  <app-post-list ></app-post-list> -->
 </main>
