--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,12 +1,13 @@
 <mat-card>
-  <form (submit)="onAddPost(postForm)" #postForm="ngForm">
+  <mat-spinner *ngIf="isLoading"></mat-spinner>
+  <form (submit)="onSavePost(postForm)" #postForm="ngForm" *ngIf="!isLoading">
     <mat-form-field>
       <input
        matInput
        type="text"
        name="title"
        placeholder="Post Title"
-       ngModel
+       [ngModel]="singlePost?.title"
        required
        #title="ngModel">
        <mat-error *ngIf="title.invalid">Please Enter the title for the Post</mat-error>
@@ -15,7 +16,7 @@
       <textarea
        matInput
        rows="6"
-       ngModel
+       [ngModel]= "singlePost?.content"
        name="content"
        placeholder="Post Content"
        required
