--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -21,6 +21,9 @@
     <div>
       <button mat-stroked-button (click)="filePicker.click()" type="button"> Pick Image</button>
       <input type="file" #filePicker (change)="onImagePicked($event)">
+    </div>
+    <div class="image-preview" *ngIf="imagePreview !== '' && imagePreview">
+      <img [src]="imagePreview" [alt]="form.value.title">
     </div><br>
     <button mat-raised-button
      color='primary'
