--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -22,7 +22,7 @@
       <button mat-stroked-button (click)="filePicker.click()" type="button"> Pick Image</button>
       <input type="file" #filePicker (change)="onImagePicked($event)">
     </div>
-    <div class="image-preview" *ngIf="imagePreview !== '' && imagePreview">
+    <div class="image-preview" *ngIf="imagePreview !== '' && imagePreview && form.get('image').valid">
       <img [src]="imagePreview" [alt]="form.value.title">
     </div><br>
     <button mat-raised-button
