--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -9,6 +9,9 @@
       <a mat-button color="primary" [routerLink]="['/edit',post.id]">EDIT</a>
       <button mat-button color="warn" (click)="onDelete(post.id)">DELETE</button>
     </mat-action-row>
+    <div class="post-image">
+      <img [src]="post.imagePath" [alt]="post.title">
+    </div>
   </mat-expansion-panel>
 </mat-accordion>
 <p class="info-text mat-body-1" *ngIf="posts.length <= 0 && !isLoading">No Post yet</p>
